<resources>
    <string name="app_name">Turismo BA</string>
    <string name="contentTittleText">lista de contenidos</string>
    <string name="buttonText">Agregar Contenido</string>
    <string name="listTextItem">Es un ejemplo de texto</string>
    <string name="contenido_titulo">Que hacer esta semana</string>
    <string name="contenido_descripcion">No dudes en consultar todas nuestras actividades y propuestas destacadas</string>
    <string name="footer_principales">Lo mas visitado</string>
    <string name="footer_sugerencias">Imperdibles Turismo en Barrios Compras en la Ciudad Teatros Qué hacer esta semana ¿Primera vez en Buenos Aires?</string>
    <string name="contenido_dia">Buscar por dia</string>
    <string name="contenido_buscarAct">Buscar por tipo de actividad</string>
    <string name="btn_contenido_buscar">Buscar</string>
    <string name="primer_subtitulo">¿Cuándo?</string>
    <string name="donde">¿Dónde?</string>
    <string name="direccion_colon">Cerrito 650</string>
    <string name="direccion_buses">Av. Quintana 596 (el amarillo) y Diagonal Roque Sáenz Peña 728 (el rojo)</string>
    <string name="descripcion_icono_correo">icono correo</string>
    <string name="descripcion_icono_whats">icono whatsapp</string>
    <string name="descripcion_icono_ba">icono BA</string>
    <string name="mail_turismo">turismo_caba@gobierno.com.ar</string>
    <string name="telefono_contacto">5491150500147</string>
    <string name="descripcion_icono_hamburger">icono desplegable</string>
    <string name="descripcion_imagen_caba">imagen patio caba</string>
    <string name="destacado_gastronomia">Evento destacado del día</string>
    <string name="description_imagen_gastro">Descripción de la imagen gastronómica</string>
    <string name="direccionEvento_gastronomia">Mercat Villa Crespo. Thames 747.</string>
    <string name="descripcionGastro">Abrió sus puertas al público Mercat, un espacio de encuentro donde poder disfrutar de la comida y descubrir productos a precios accesibles.  Mercat puede visitarse los martes, miércoles, jueves y domingos, de 11 a 20 hs y los sábados, de 11 a 24. Los lunes permanecerá cerrado.  En un espacio de 2700 metros cuadrados y 3 plantas, donde habrá lugar para 38 locales, la propuesta se inspira en los más icónicos mercados urbanos del mundo y será mixta: habrá una combinación de productos y gastronomía conceptual. Los lunes permanecerá cerrado.  En un espacio de 2700 metros cuadrados y 3 plantas, donde habrá lugar para 38 locales, la propuesta se inspira en los más icónicos mercados urbanos del mundo y será mixta: habrá una combinación. Los lunes permanecerá cerrado.  En un espacio de 2700 metros cuadrados y 3 plantas, donde habrá lugar para 38 locales, la propuesta se inspira en los más icónicos mercados urbanos del mundo y será mixta: habrá una combinación</string>
    <string name="tituloVisitas">Evento destacado de visitas</string>
    <string name="description_imagen_visita">Descripción de la imagen visita</string>
    <string name="direccioneEvento_visitas">Av. Sarmiento y Av. Belisario Roldan.</string>
    <string name="linearDescripcionVisita">Completa el formulario para que podamos realizarte una reserva especial para poder conocerlo por dentro. </string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="hint_correo">Correo Electrónico</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_mensaje">Mensaje</string>
    <string name="button_enviar">Enviar</string>
    <string name="agradecimiento"> Muchas gracias por enviarnos tus datos.</string>
    <string name="button_regresar">Regresar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_usuario">Usuario</string>
    <string name="texto_contrasena">Contrasena</string>
    <string name="texto_iniciar_sesion">Iniciar sesion</string>
    <string name="texto_registro">Registrarse</string>
    <string name="texto_que_redirige">¿Todavia no te registraste? Hace click aca</string>
    <string name="logueo_exitoso"> Te logueaste correctamente</string>
    <string name="ir_al_inicio">Ir al inicio</string>
    <string name="texto_subtitulo">Ingrese los datos de los visitantes</string>


</resources>